# template-py

./: .env.sample  .gitignore  README.md  Taskfile.docker.yaml  Taskfile.yaml  compose.yaml  pyproject.toml
docker/app/: Dockerfile
src/: main.py
